# SlayTheSpire-Solver

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  conftest.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
bridge_mod/: mod_manifest.json  sts_sim_bridge_mod.csproj
data/: cards.toml  monsters.toml  statuses.toml
etc/: monsters.toml
integtests/: conftest.py  test_card_effects_live.py  test_sim_vs_live.py
notebooks/: benchmarks.ipynb
scripts/: gen_ids.py  overlay.sh  scrape_card_descriptions.py  start-server.sh
src/: act.rs  action.rs  cards.rs  encounters.rs  engine.rs  ids.rs  lib.rs  mcts.rs  monsters.rs  run.rs  state.rs
tests/: conftest.py  proto_console_card_tests.py  test_act1_easy_monsters.py  test_action_types.py  test_apply_types.py  test_block_and_statuses.py  test_bridge_cli.py  test_card_instance.py  test_card_play.py  test_ceremonial_beast.py  test_cli.py  test_combat_loop.py  test_elite_pool_draw.py  test_ethereal.py  test_fogmog.py  test_gen_ids.py  test_hol30_phrog_parasite.py  test_hol32_bygone_effigy.py  test_hol42_monsters.py  test_hol43_tracker_mawler.py  test_hol44_cubex.py  test_hol45_strangler.py  test_hol46_vine_shambler.py  test_hol47_flyconid.py  test_inklet.py  test_mcts.py  test_mcts_rs.py  test_monster_ai.py  test_monster_pool_draw.py  test_monster_registration.py  test_names_catalog.py  test_new_monsters.py  test_overgrowth_e2e_run.py  test_overgrowth_skeleton.py  test_phase0_cards.py  test_phase1_cards.py  test_phase2_cards.py  test_phase3_cards.py  test_phase4_wave1_cards.py  test_phase4_wave2_cards.py  (+18 more)
(+47 files in other folders)
